Map.of and List.of