@@ -32,6 +32,7 @@ import com.descope.sdk.mgmt.AuthzService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import java.io.File;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -76,7 +77,7 @@ public class AuthzServiceImplTest {
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.saveSchema(Schema.builder().namespaces(List.of(new Namespace())).build(), false);
+      authzService.saveSchema(Schema.builder().namespaces(Arrays.asList(new Namespace())).build(), false);
     }
   }
 
@@ -134,7 +135,7 @@ public class AuthzServiceImplTest {
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.saveNamespace(new Namespace("kuku", List.of(new RelationDefinition())), null, null);
+      authzService.saveNamespace(new Namespace("kuku", Arrays.asList(new RelationDefinition())), null, null);
     }
   }
 
@@ -237,7 +238,7 @@ public class AuthzServiceImplTest {
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.createRelations(List.of(new Relation()));
+      authzService.createRelations(Arrays.asList(new Relation()));
     }
   }
 
@@ -258,7 +259,7 @@ public class AuthzServiceImplTest {
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.deleteRelations(List.of(new Relation()));
+      authzService.deleteRelations(Arrays.asList(new Relation()));
     }
   }
 
@@ -279,7 +280,7 @@ public class AuthzServiceImplTest {
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.deleteRelationsForResources(List.of("kuku"));
+      authzService.deleteRelationsForResources(Arrays.asList("kuku"));
     }
   }
 
@@ -296,11 +297,11 @@ public class AuthzServiceImplTest {
   @Test
   void testHasRelationsForSuccess() {
     ApiProxy apiProxy = mock(ApiProxy.class);
-    doReturn(new HasRelationsResponse(List.of(new RelationQuery()))).when(apiProxy).post(any(), any(), any());
+    doReturn(new HasRelationsResponse(Arrays.asList(new RelationQuery()))).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.hasRelations(List.of(new RelationQuery()));
+      authzService.hasRelations(Arrays.asList(new RelationQuery()));
     }
   }
 
@@ -329,7 +330,7 @@ public class AuthzServiceImplTest {
   @Test
   void testWhoCanAccessForSuccess() {
     ApiProxy apiProxy = mock(ApiProxy.class);
-    doReturn(new WhoCanAccessResponse(List.of("kuku"))).when(apiProxy).post(any(), any(), any());
+    doReturn(new WhoCanAccessResponse(Arrays.asList("kuku"))).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
@@ -350,7 +351,7 @@ public class AuthzServiceImplTest {
   @Test
   void testResourceRelationsForSuccess() {
     ApiProxy apiProxy = mock(ApiProxy.class);
-    doReturn(new RelationsResponse(List.of(new Relation()))).when(apiProxy).post(any(), any(), any());
+    doReturn(new RelationsResponse(Arrays.asList(new Relation()))).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
@@ -371,11 +372,11 @@ public class AuthzServiceImplTest {
   @Test
   void testUsersRelationsForSuccess() {
     ApiProxy apiProxy = mock(ApiProxy.class);
-    doReturn(new RelationsResponse(List.of(new Relation()))).when(apiProxy).post(any(), any(), any());
+    doReturn(new RelationsResponse(Arrays.asList(new Relation()))).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      authzService.targetsRelations(List.of("kiki"));
+      authzService.targetsRelations(Arrays.asList("kiki"));
     }
   }
 
@@ -392,7 +393,7 @@ public class AuthzServiceImplTest {
   @Test
   void testWhatCanUserAccessForSuccess() {
     ApiProxy apiProxy = mock(ApiProxy.class);
-    doReturn(new RelationsResponse(List.of(new Relation()))).when(apiProxy).post(any(), any(), any());
+    doReturn(new RelationsResponse(Arrays.asList(new Relation()))).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
@@ -409,7 +410,7 @@ public class AuthzServiceImplTest {
     if (!existingSchema.getName().equals(s.getName())) {
       authzService.deleteSchema();
       authzService.saveSchema(s, true);
-      authzService.createRelations(List.of(
+      authzService.createRelations(Arrays.asList(
         new Relation("Dev", "parent", "org", "Descope", null, null, null, null),
         new Relation("Sales", "parent", "org", "Descope", null, null, null, null),
         new Relation("Dev", "member", "org", "u1", null, null, null, null),
@@ -422,7 +423,7 @@ public class AuthzServiceImplTest {
         new Relation("Presentations", "editor", "folder", null, "Sales", "member", "org", null)
       ));
     }
-    List<RelationQuery> resp = authzService.hasRelations(List.of(
+    List<RelationQuery> resp = authzService.hasRelations(Arrays.asList(
       new RelationQuery("roadmap.ppt", "owner", "doc", "u1", false),
       new RelationQuery("roadmap.ppt", "editor", "doc", "u1", false),
       new RelationQuery("roadmap.ppt", "viewer", "doc", "u1", false),
@@ -437,10 +438,10 @@ public class AuthzServiceImplTest {
     assertFalse(resp.get(4).isHasRelation());
     assertTrue(resp.get(5).isHasRelation());
     List<String> respWho = authzService.whoCanAccess("roadmap.ppt", "editor", "doc");
-    assertThat(respWho).hasSameElementsAs(List.of("u1", "u2"));
+    assertThat(respWho).hasSameElementsAs(Arrays.asList("u1", "u2"));
     List<Relation> respResourceRelations = authzService.resourceRelations("roadmap.ppt");
     assertThat(respResourceRelations).size().isEqualTo(2);
-    List<Relation> respUsersRelations = authzService.targetsRelations(List.of("u1"));
+    List<Relation> respUsersRelations = authzService.targetsRelations(Arrays.asList("u1"));
     assertThat(respUsersRelations).size().isEqualTo(2);
     List<Relation> respWhat = authzService.whatCanTargetAccess("u1");
     assertThat(respWhat).size().isEqualTo(7);
